added footer with copyrighting

--- a/site/index.html
+++ b/site/index.html
@@ -10,6 +10,7 @@
     <header>
       <h1>South Island Kitchen</h1>
     </header>
+
     <main>
       <p>Here lies in this repository a collection of our all-time favourite recipes, rated by the South Island Chef's exceptional and worldly palates.</p>
       <p>Green hearts (💚) represent recipes as a whole-food, balanced, and healthy meal.</p>
@@ -55,5 +56,9 @@
         </ul>
       {% endfor %}
     </main>
+    
+    <footer>
+      <p>&copy; {{ "now" | date: "%Y" }} Calum Dear. All rights reserved.</p>
+    </footer>
   </body>
 </html>
