--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,135 @@
----
-layout: layouts/base.html
-title: South Island Kitchen
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
+    <title>{{ title | default: "South Island Kitchen" }}</title>
+    <link rel="icon" type="image/x-icon" href="{{ '/assets/logo/favicon.png' | url }}">
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="site-header__inner">
+        <a class="site-brand" href="/">
+          <img
+            src="/assets/logo/logo.png"
+            alt="South Island Kitchen logo"
+            class="site-brand__mark"
+          />
+          <div class="site-brand__text">
+            <span class="site-brand__name">South Island Kitchen</span>
+            <span class="site-brand__tagline">Get fed.</span>
+          </div>
+        </a>
+      </div>
+    </header>
 
-<p>Here lies in this repository a collection of our all-time favourite recipes, rated by the South Island Chef's exceptional and worldly palates.</p>
-<p>Green hearts (💚) represent recipes as a whole-food, balanced, and healthy meal.</p>
-<p>Construction emojis (🚧👷‍♂️) represent recipes which are incomplete.</p>
+    <main class="page">
+      <section id="intro" class="recipe-section">
+        <div class="content-shell">
+          <div class="content-card">
+            <h1>South Island Kitchen</h1>
+            <p>Here lies in this repository a collection of our all-time favourite recipes, rated by the South Island Chef's exceptional and worldly palates.</p>
+            <p>Green hearts (💚) represent recipes as a whole-food, balanced, and healthy meal.</p>
+            <p>Construction emojis (🚧👷‍♂️) represent recipes which are incomplete.</p>
+          </div>
+        </div>
+      </section>
 
-<section id="fish" class="recipe-section">
-  <h2>Fish</h2>
-  <ul class="recipe-list">
-    {% for fish in collections.fish %}
-      <li>
-        <h3><a href="{{ fish.url }}">{{ fish.data.title }}</a></h3>
-      </li>
-    {% endfor %}
-  </ul>
-</section>
+      <section id="fish" class="recipe-section">
+        <div class="content-shell">
+          <div class="content-card">
+            <h2>Fish</h2>
+            <ul class="recipe-list">
+              {% for item in collections.fish %}
+                <li>
+                  <h3><a href="{{ item.url }}">{{ item.data.title }}</a></h3>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </section>
 
-<section id="asian" class="recipe-section">
-  <h2>Asian</h2>
-  <ul class="recipe-list">
-    {% for asian in collections.asian %}
-      <li>
-        <h3><a href="{{ asian.url }}">{{ asian.data.title }}</a></h3>
-      </li>
-    {% endfor %}
-  </ul>
-</section>
+      <section id="asian" class="recipe-section">
+        <div class="content-shell">
+          <div class="content-card">
+            <h2>Asian</h2>
+            <ul class="recipe-list">
+              {% for item in collections.asian %}
+                <li>
+                  <h3><a href="{{ item.url }}">{{ item.data.title }}</a></h3>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </section>
 
-<section id="european" class="recipe-section">
-  <h2>European</h2>
-  <ul class="recipe-list">
-    {% for european in collections.european %}
-      <li>
-        <h3><a href="{{ european.url }}">{{ european.data.title }}</a></h3>
-      </li>
-    {% endfor %}
-  </ul>
-</section>
+      <section id="european" class="recipe-section">
+        <div class="content-shell">
+          <div class="content-card">
+            <h2>European</h2>
+            <ul class="recipe-list">
+              {% for item in collections.european %}
+                <li>
+                  <h3><a href="{{ item.url }}">{{ item.data.title }}</a></h3>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </section>
 
-<section id="salads" class="recipe-section">
-  <h2>Salads</h2>
-  <ul class="recipe-list">
-    {% for salad in collections.salad %}
-      <li>
-        <h3><a href="{{ salad.url }}">{{ salad.data.title }}</a></h3>
-      </li>
-    {% endfor %}
-  </ul>
-</section>
+      <section id="salads" class="recipe-section">
+        <div class="content-shell">
+          <div class="content-card">
+            <h2>Salads</h2>
+            <ul class="recipe-list">
+              {% for item in collections.salad %}
+                <li>
+                  <h3><a href="{{ item.url }}">{{ item.data.title }}</a></h3>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </section>
 
-<section id="deserts" class="recipe-section">
-  <h2>Deserts</h2>
-  <ul class="recipe-list">
-    {% for desert in collections.desert %}
-      <li>
-        <h3><a href="{{ desert.url }}">{{ desert.data.title }}</a></h3>
-      </li>
-    {% endfor %}
-  </ul>
-</section>
+      <section id="deserts" class="recipe-section">
+        <div class="content-shell">
+          <div class="content-card">
+            <h2>Deserts</h2>
+            <ul class="recipe-list">
+              {% for item in collections.desert %}
+                <li>
+                  <h3><a href="{{ item.url }}">{{ item.data.title }}</a></h3>
+                </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="content-shell">
+        <p>&copy; {{ "now" | date: "%Y" }} Calum Dear. All rights reserved.</p>
+      </div>
+    </footer>
+    <script>
+      (() => {
+        const header = document.querySelector(".site-header");
+        if (!header) return;
+
+        const handleScroll = () => {
+          const isCompact = window.scrollY > 12;
+          header.classList.toggle("site-header--compact", isCompact);
+        };
+
+        window.addEventListener("scroll", handleScroll, { passive: true });
+        handleScroll();
+      })();
+    </script>
+  </body>
+</html>
