--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <div class="content-shell">
           <div class="content-card">
             <h1>South Island Kitchen</h1>
-            <p>Here lies in this repository a collection of our all-time favourite recipes, rated by the South Island Chef's exceptional and worldly palates.</p>
+            <p>Here lies in this repository a collection of our all-time favourite recipes, rated by the South Island Chefs' exceptional and worldly palates.</p>
             <p>Green hearts (💚) represent recipes as a whole-food, balanced, and healthy meal.</p>
             <p>Construction emojis (🚧👷‍♂️) represent recipes which are incomplete.</p>
           </div>
